# vaultfinder-microbiome

./: .gitignore  README.md  TODO  notes.md  pyproject.toml  reference.duckdb  requirements.txt
artifacts/: index_mapping.json  kmer_vectorizer.json  sample_index.faiss
artifacts/asv_vectors/: S1__ASV1.npy  S1__ASV2.npy  S2__ASV6.npy  S3__ASV7.npy
artifacts/sample_vectors/: S1.npy  S2.npy  S3.npy
cli/: compare_samples.py  load_reference.py
data/: asv_table.tsv  meta.tsv
docs/: ARCHITECTURE.md  USAGE.md
microbiome_tool/: db.py  faiss_index.py  utils.py  vectorizers.py
microbiome_tool/api/: app.py
microbiome_tool/pipeline/: comparison.py  ingestion.py
tests/: test_comparison.py  test_db.py  test_ingestion.py  test_vectorizers.py  test_wide_ingestion.py
